Löschen falscher Vertikalstrich

--- a/movies.html
+++ b/movies.html
@@ -82,7 +82,7 @@
                   2021
                   <i class="space">|</i>
                   100 min
-                  <i class="space">|</i> </h5>
+                  </h5>
               </div>
             </div>
 
@@ -125,7 +125,7 @@
                   2020
                   <i class="space">|</i>
                   91 min
-                  <i class="space">|</i> </h5>
+                  </h5>
               </div>
             </div>
 
@@ -168,7 +168,7 @@
               2020
               <i class="space">|</i>
               99 min
-              <i class="space">|</i> </h5>
+            </h5>
           </div>
         </div>
 
@@ -211,7 +211,7 @@
                   2019
                   <i class="space">|</i>
                   107 min
-                  <i class="space">|</i> </h5>
+                </h5>
               </div>
             </div>
 
@@ -257,7 +257,7 @@
                   2018
                   <i class="space">|</i>
                   114 min
-                  <i class="space">|</i> </h5>
+                </h5>
               </div>
             </div>
 
@@ -277,7 +277,7 @@
                 <dd>Christof Schertenleib</dd>
 
                 <dt>Produzenten</dt>
-                <dd>Tolga Dilsiz, Aurelius Eisenreich, Jonas Katzenstein</dd>
+                <dd>Tolga Dilsiz, Aurelius Eisenreich</dd>
               </dl>
             </div>
           </div>
@@ -303,7 +303,7 @@
                   2017
                   <i class="space">|</i>
                   18 min
-                  <i class="space">|</i> </h5>
+                </h5>
               </div>
             </div>
 
@@ -348,7 +348,7 @@
                   2016
                   <i class="space">|</i>
                   82 min
-                  <i class="space">|</i> </h5>
+                </h5>
               </div>
             </div>
 
