Further design improvements

--- a/about.html
+++ b/about.html
@@ -68,12 +68,12 @@
           Ciao zäme! Ich bin Oliver, ein Creative Producer aus St. Gallen.
         </p>
 
-        <h3 class="title is-size-3 is-uppercase has-text-weight-normal has-text-white">Aktuell</h3>
+        <h3 class="title is-about is-uppercase has-text-white">Aktuell</h3>
         <p class="has-text-white">
           Aktuell arbeite ich als Produktionsleiter beim Schweizer Radio und Fernsehen SRF. Seit 2019 betreue in erster Linie die Docudrama-Reihe «Es geschah am…».
         </p>
 
-        <h3 class="title is-size-3 is-uppercase has-text-weight-normal has-text-white">Lebensweg</h3>
+        <h3 class="title is-about is-uppercase has-text-white">Background</h3>
         <dl class="has-text-white timeline">
           <dt>since 2017</dt>
           <dd>Produktionsleiter beim Schweizer Radio und Fernsehen SRF</dd>
@@ -105,13 +105,13 @@
 
         <ul class="is-flex is-flex-direction-row is-justify-content-space-between">
           <li>
-            <h3 class="title is-size-3 is-uppercase has-text-weight-normal has-text-white">
+            <h3 class="title is-about is-uppercase has-text-white">
               <a href="assets/CV_Bolt-Oliver.pdf" class="bold" target="_blank">Download Full CV</a>
             </h3>
           </li>
 
           <li>
-            <h3 class="title is-size-3 is-uppercase has-text-weight-normal has-text-white">
+            <h3 class="title is-about is-uppercase has-text-white">
               <a href="movies.html" class="bold">Filmographie</a>
             </h3>
           </li>
