Short CV Klammer-Bemerkung <small>

--- a/about.html
+++ b/about.html
@@ -79,28 +79,28 @@
           <dd>Produktionsleiter beim Schweizer Radio und Fernsehen SRF</dd>
 
           <dt>2016 - 2017</dt>
-          <dd>Focal-Stage Prod.leitung bei «Der Unschuldige» von Simon Jaquemet (8horses)</dd>
+          <dd>Focal-Stage Prod.leitung bei «Der Unschuldige» von Simon Jaquemet <small>(8horses)</small></dd>
 
           <dt>2016</dt>
-          <dd>Produktionsleitung Kurzfilm «Zwischenstopp» von Cosima Frei (2:1 Film)</dd>
+          <dd>Produktionsleitung Kurzfilm «Zwischenstopp» von Cosima Frei <small>(2:1 Film)</small></dd>
 
           <dt>2015 - 2016</dt>
           <dd>Produktion / Redaktion / VJ bei Halsundbeinbruch Film</dd>
 
           <dt>2015</dt>
-          <dd>Aufnahmeleitung bei «Peripherie» - Episode von Wendy Pillonel (ZHdK)</dd>
+          <dd>Aufnahmeleitung bei «Peripherie» - Episode von Wendy Pillonel <small>(ZHdK)</small></dd>
 
           <dt>2014 - 2015</dt>
           <dd>Praktikum im Bereich Content Production bei Habegger AG</dd>
 
           <dt>2014</dt>
-          <dd>Statistenkoordinator bei «Vaterjagd» von Rahel Grunder (SRF | atlantis pictures)</dd>
+          <dd>Statistenkoordinator bei «Vaterjagd» von Rahel Grunder <small>(SRF | atlantis pictures)</small></dd>
 
           <dt>2010 – 2013</dt>
-          <dd>Bachelor in Multimedia Production an der HTW Chur (Major TV / Film)</dd>
+          <dd>Bachelor in Multimedia Production an der HTW Chur <small>(Major TV / Film)</small></dd>
 
           <dt>2012 – 2013</dt>
-          <dd>Erasmus-Semester an der HdM Stuttgart (Studioproduktion Film)</dd>
+          <dd>Erasmus-Semester an der HdM Stuttgart <small>(Studioproduktion Film)</small></dd>
         </dl>
 
         <h3 class="title is-about is-uppercase has-text-white">
