--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
         </p>
 
         <h3 class="title is-about is-uppercase has-text-white">Aktuell</h3>
-        <p class="has-text-white">
+        <p class="has-text-white is-light">
           Aktuell arbeite ich als Produktionsleiter beim Schweizer Radio und Fernsehen SRF. Seit 2019 betreue in erster Linie die Docudrama-Reihe «Es geschah am…».
         </p>
 
