--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
       </div>
       <div class="hero-foot"></div>
     </section>
-    <nav class="navbar has-background-black is-fixed-bottom is-absolute-fixed-bottom" role="navigation" aria-label="main navigation">
+    <nav class="navbar has-background-black is-fixed-bottom" role="navigation" aria-label="main navigation">
       <div class="navbar-menu">
         <div class="navbar-end">
           <a href="https://www.instagram.com/ollie.bolt/" target="_blank" class="navbar-item has-text-white">
