More design stuff

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
     </nav>
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
       <div class="hero-body">
-        <p class="has-text-white">
+        <p class="has-text-white is-intro-text">
           Ciao zäme! Ich bin Oliver, ein Creative Producer aus St. Gallen.
         </p>
 
@@ -104,7 +104,7 @@
         </dl>
 
         <h3 class="title is-about is-uppercase has-text-white">
-          <a href="assets/CV_Bolt-Oliver.pdf" class="bold" target="_blank">Download Full CV</a>
+          <a href="assets/CV_Bolt-Oliver.pdf" class="link" target="_blank">Download Full CV</a>
         </h3>
       </div>
       <div class="hero-foot"></div>
