--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
       <div class="hero-body">
         <p class="has-text-white is-intro-text">
-          Ciao zäme! Ich bin Oliver, ein Creative Producer aus St. Gallen.
+          Ciao zäme! Ich bin Oliver, ein Creative Producer aus St. Gallen. Mir sitzed scho 100 Stund do und de Marco schiissts langsam ah!
         </p>
 
         <h3 class="title is-about is-uppercase has-text-white">Aktuell</h3>
