--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
       <div id="navbar-main" class="navbar-menu is-hidden-touch">
         <div class="navbar-end">
-          <a href="movies.html" class="navbar-item is-uppercase is-size-4 has-text-white">
+          <a href="movies/" class="navbar-item is-uppercase is-size-4 has-text-white">
             Filme
           </a>
 
@@ -52,7 +52,7 @@
             Bilder
           </a>
           
-          <a href="about.html" class="navbar-item is-uppercase is-size-4 has-text-white">
+          <a href="about/" class="navbar-item is-uppercase is-size-4 has-text-white">
             About
           </a>
 
