--- a/movies/index.html
+++ b/movies/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Oliver Bolt - Filme</title>
-    <link rel="stylesheet" href="assets/css/main.css">
-    <script defer src="node_modules/@fortawesome/fontawesome-free/js/brands.js"></script>
-    <script defer src="node_modules/@fortawesome/fontawesome-free/js/fontawesome.js"></script>
+    <link rel="stylesheet" href="../assets/css/main.css">
+    <script defer src="../node_modules/@fortawesome/fontawesome-free/js/brands.js"></script>
+    <script defer src="../node_modules/@fortawesome/fontawesome-free/js/fontawesome.js"></script>
   </head>
   <body>
     <div class="navbar has-background-black is-flex">
       <div class="navbar-brand">
-        <a class="navbar-item" href="index.html">
+        <a class="navbar-item" href="../">
           <h1 class="title is-uppercase has-text-weight-bold has-text-white">Oliver Bolt</h1>
         </a>
       </div>
@@ -44,7 +44,7 @@
       </div>
       <div id="navbar-main" class="navbar-menu is-hidden-touch has-background-black">
         <div class="navbar-end">
-          <a href="movies.html" class="navbar-item is-uppercase is-size-4 has-text-white is-active">
+          <a href="../movies" class="navbar-item is-uppercase is-size-4 has-text-white is-active">
             Filme
           </a>
 
@@ -52,7 +52,7 @@
             Bilder
           </a>
           
-          <a href="about.html" class="navbar-item is-uppercase is-size-4 has-text-white">
+          <a href="../about" class="navbar-item is-uppercase is-size-4 has-text-white">
             About
           </a>
 
@@ -397,6 +397,6 @@
         </div>
       </div>
     </nav>
-    <script type="text/javascript" src="lib/main.js"></script>
+    <script type="text/javascript" src="../lib/main.js"></script>
   </body>
 </html>
