--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Oliver Bolt</title>
     <link rel="stylesheet" href="assets/css/main.css">
-    <script defer src="node_modules/@fortawesome/fontawesome-free/js/brands.js"></script>
-    <script defer src="node_modules/@fortawesome/fontawesome-free/js/fontawesome.js"></script>
   </head>
   <body>
     <div class="navbar has-background-black is-flex">
@@ -56,7 +54,7 @@
             About
           </a>
 
-          <a class="navbar-item is-uppercase is-size-4 has-text-white">
+          <a href="contact/" class="navbar-item is-uppercase is-size-4 has-text-white">
             Kontakt
           </a>
         </div>
