--- a/contact/index.html
+++ b/contact/index.html
@@ -72,14 +72,24 @@
         </p>
         <ul class="social">
           <li>
-              <a href="https://www.instagram.com/ollie.bolt/" target="_blank" class="has-text-white">
+              <a href="mailto:email@oliver.bolt.name" target="_blank" class="has-text-white">
                   <span class="icon">
-                    <i class="fab fa-instagram"></i>
+                    <i class="fas fa-envelope"></i>
                   </span>
                   <span class="text">
-                      Instagram
+                      email@oliver.bolt.name
                   </span>
                 </a>
+          </li>
+          <li>
+            <a href="tel:+41791234567" target="_blank" class="has-text-white">
+                <span class="icon">
+                  <i class="fas fa-phone"></i>
+                </span>
+                <span class="text">
+                    +41 79 123 45 67
+                </span>
+              </a>
           </li>
         </ul>
 
