Linked Pictures Page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             Filme
           </a>
 
-          <a class="navbar-item is-uppercase is-size-4 has-text-white">
+          <a href="pictures/" class="navbar-item is-uppercase is-size-4 has-text-white">
             Bilder
           </a>
           
