--- a/pictures/index.html
+++ b/pictures/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Oliver Bolt - Über</title>
+    <title>Oliver Bolt - Bilder</title>
     <link rel="stylesheet" href="../assets/css/main.css">
   </head>
   <body>
@@ -46,11 +46,11 @@
             Filme
           </a>
 
-          <a href="../pictures" class="navbar-item is-uppercase is-size-4 has-text-white">
+          <a href="../pictures" class="navbar-item is-uppercase is-size-4 has-text-white is-active">
             Bilder
           </a>
           
-          <a href="../about" class="navbar-item is-uppercase is-size-4 has-text-white is-active">
+          <a href="../about" class="navbar-item is-uppercase is-size-4 has-text-white">
             About
           </a>
 
@@ -63,47 +63,72 @@
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
       <div class="hero-body">
         <p class="has-text-white is-intro-text">
-          Ciao zäme! Ich bin Oliver, ein Creative Producer aus St. Gallen. Mir sitzed scho 100 Stund do und de Marco schiissts langsam ah!
+          Sali Du! Kontakt Schmontakt.
         </p>
 
-        <h3 class="title is-about is-uppercase has-text-white">Aktuell</h3>
+        <h3 class="title is-about is-uppercase has-text-white">Kontakt</h3>
         <p class="has-text-white is-light">
-          Aktuell arbeite ich als Produktionsleiter beim Schweizer Radio und Fernsehen SRF. Seit 2019 betreue in erster Linie die Docudrama-Reihe «Es geschah am…».
+          Hesch e Frog oder wetsch meh über mich wüsse? Schriibmer e Nochricht!
         </p>
+        <ul class="social">
+          <li>
+              <a href="mailto:email@oliver.bolt.name" target="_blank" class="has-text-white">
+                  <span class="icon">
+                    <i class="fas fa-envelope"></i>
+                  </span>
+                  <span class="text">
+                      email@oliver.bolt.name
+                  </span>
+                </a>
+          </li>
+          <li>
+            <a href="tel:+41791234567" target="_blank" class="has-text-white">
+                <span class="icon">
+                  <i class="fas fa-phone"></i>
+                </span>
+                <span class="text">
+                    +41 79 123 45 67
+                </span>
+              </a>
+          </li>
+        </ul>
 
-        <h3 class="title is-about is-uppercase has-text-white">Background</h3>
-        <dl class="has-text-white timeline">
-          <dt>since 2017</dt>
-          <dd>Produktionsleiter beim Schweizer Radio und Fernsehen SRF</dd>
-
-          <dt>2016 - 2017</dt>
-          <dd>Focal-Stage Prod.leitung bei «Der Unschuldige» von Simon Jaquemet <small>(8horses)</small></dd>
-
-          <dt>2016</dt>
-          <dd>Produktionsleitung Kurzfilm «Zwischenstopp» von Cosima Frei <small>(2:1 Film)</small></dd>
-
-          <dt>2015 - 2016</dt>
-          <dd>Produktion / Redaktion / VJ bei Halsundbeinbruch Film</dd>
-
-          <dt>2015</dt>
-          <dd>Aufnahmeleitung bei «Peripherie» - Episode von Wendy Pillonel <small>(ZHdK)</small></dd>
-
-          <dt>2014 - 2015</dt>
-          <dd>Praktikum im Bereich Content Production bei Habegger AG</dd>
-
-          <dt>2014</dt>
-          <dd>Statistenkoordinator bei «Vaterjagd» von Rahel Grunder <small>(SRF | atlantis pictures)</small></dd>
-
-          <dt>2010 – 2013</dt>
-          <dd>Bachelor in Multimedia Production an der HTW Chur <small>(Major TV / Film)</small></dd>
-
-          <dt>2012 – 2013</dt>
-          <dd>Erasmus-Semester an der HdM Stuttgart <small>(Studioproduktion Film)</small></dd>
-        </dl>
-
-        <h3 class="title is-about is-uppercase has-text-white">
-          <a href="../assets/CV_Bolt-Oliver.pdf" class="link" target="_blank">Download Full CV</a>
-        </h3>
+        <h3 class="title is-about is-uppercase has-text-white">Social Media</h3>
+        <p class="has-text-white is-light">
+          Meh über mich findsch au uf Social Media:
+        </p>
+        <ul class="social">
+            <li>
+                <a href="https://www.instagram.com/ollie.bolt/" target="_blank" class="has-text-white">
+                    <span class="icon">
+                      <i class="fab fa-instagram"></i>
+                    </span>
+                    <span class="text">
+                        Instagram
+                    </span>
+                  </a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/oliver.bolt1" target="_blank" class="has-text-white">
+                <span class="icon">
+                  <i class="fab fa-facebook"></i>
+                </span>
+                <span class="text">
+                  Facebook
+                </span>
+              </a>
+            </li>
+            <li>
+              <a href="https://ch.linkedin.com/in/oliver-bolt-733456228/" target="_blank" class="has-text-white">
+                <span class="icon">
+                  <i class="fab fa-linkedin"></i>
+                </span>
+                <span class="text">
+                  LinkedIn
+                </span>
+              </a>
+            </li>
+        </ul>
       </div>
       <div class="hero-foot"></div>
     </section>
