Experimenting with lightGallery

--- a/movies/index.html
+++ b/movies/index.html
@@ -395,6 +395,6 @@
         </div>
       </div>
     </nav>
-    <script type="text/javascript" src="../lib/main.js"></script>
+    <script type="module" src="../lib/main.js"></script>
   </body>
 </html>
