--- a/pictures/index.html
+++ b/pictures/index.html
@@ -62,73 +62,22 @@
     </nav>
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
       <div class="hero-body">
-        <p class="has-text-white is-intro-text">
-          Sali Du! Kontakt Schmontakt.
-        </p>
+        
+        <!-- Making Of
 
-        <h3 class="title is-about is-uppercase has-text-white">Kontakt</h3>
-        <p class="has-text-white is-light">
-          Hesch e Frog oder wetsch meh über mich wüsse? Schriibmer e Nochricht!
-        </p>
-        <ul class="social">
-          <li>
-              <a href="mailto:email@oliver.bolt.name" target="_blank" class="has-text-white">
-                  <span class="icon">
-                    <i class="fas fa-envelope"></i>
-                  </span>
-                  <span class="text">
-                      email@oliver.bolt.name
-                  </span>
-                </a>
-          </li>
-          <li>
-            <a href="tel:+41791234567" target="_blank" class="has-text-white">
-                <span class="icon">
-                  <i class="fas fa-phone"></i>
-                </span>
-                <span class="text">
-                    +41 79 123 45 67
-                </span>
-              </a>
-          </li>
-        </ul>
+        On The Road
 
-        <h3 class="title is-about is-uppercase has-text-white">Social Media</h3>
-        <p class="has-text-white is-light">
-          Meh über mich findsch au uf Social Media:
-        </p>
-        <ul class="social">
-            <li>
-                <a href="https://www.instagram.com/ollie.bolt/" target="_blank" class="has-text-white">
-                    <span class="icon">
-                      <i class="fab fa-instagram"></i>
-                    </span>
-                    <span class="text">
-                        Instagram
-                    </span>
-                  </a>
-            </li>
-            <li>
-              <a href="https://www.facebook.com/oliver.bolt1" target="_blank" class="has-text-white">
-                <span class="icon">
-                  <i class="fab fa-facebook"></i>
-                </span>
-                <span class="text">
-                  Facebook
-                </span>
-              </a>
-            </li>
-            <li>
-              <a href="https://ch.linkedin.com/in/oliver-bolt-733456228/" target="_blank" class="has-text-white">
-                <span class="icon">
-                  <i class="fab fa-linkedin"></i>
-                </span>
-                <span class="text">
-                  LinkedIn
-                </span>
-              </a>
-            </li>
-        </ul>
+        Miscellaneous -->
+
+        <div id="lightgallery">
+            <a href="making-of/Cabin.jpg" data-lg-size="1600-2400">
+                <img alt="Cabin" src="making-of/Cabin.jpg" />
+            </a>
+            <a href="making-of/Cross.jpg" data-lg-size="1024-800">
+                <img alt="Cross" src="making-of/Cross.jpg" />
+            </a>
+        </div>
+
       </div>
       <div class="hero-foot"></div>
     </section>
@@ -148,6 +97,6 @@
         </div>
       </div>
     </nav>
-    <script type="text/javascript" src="../lib/main.js"></script>
+    <script type="module" src="../lib/main.js"></script>
   </body>
 </html>
