--- a/about/index.html
+++ b/about/index.html
@@ -123,6 +123,6 @@
         </div>
       </div>
     </nav>
-    <script type="text/javascript" src="../lib/main.js"></script>
+    <script type="module" src="../lib/main.js"></script>
   </body>
 </html>
