--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
         </div>
       </div>
     </nav>
-    <script type="text/javascript" src="lib/main.js"></script>
+    <script type="module" src="lib/main.js"></script>
   </body>
 </html>
