--- a/contact/index.html
+++ b/contact/index.html
@@ -63,12 +63,12 @@
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
       <div class="hero-body">
         <p class="has-text-white is-intro-text">
-          Sali Du! Kontakt Schmontakt.
+          
         </p>
 
         <h3 class="title is-about is-uppercase has-text-white">Kontakt</h3>
         <p class="has-text-white is-light">
-          Hesch e Frog oder wetsch meh über mich wüsse? Schriibmer e Nochricht!
+          Haben Sie ein spannendes Projekt oder weitere Fragen? Ich freue mich auf Ihre Nachricht!
         </p>
         <ul class="social">
           <li>
@@ -87,7 +87,7 @@
                   <i class="fas fa-phone"></i>
                 </span>
                 <span class="text">
-                    +41 79 123 45 67
+                    +41 78 703 77 92
                 </span>
               </a>
           </li>
@@ -95,7 +95,7 @@
 
         <h3 class="title is-about is-uppercase has-text-white">Social Media</h3>
         <p class="has-text-white is-light">
-          Meh über mich findsch au uf Social Media:
+          Social Media:
         </p>
         <ul class="social">
             <li>
