--- a/contact/index.html
+++ b/contact/index.html
@@ -81,8 +81,9 @@
                   </span>
                 </a>
           </li>
+          <br>
           <li>
-            <a href="tel:+41791234567" target="_blank" class="has-text-white">
+            <a href="tel:+41787037792" target="_blank" class="has-text-white">
                 <span class="icon">
                   <i class="fas fa-phone"></i>
                 </span>
@@ -95,7 +96,7 @@
 
         <h3 class="title is-about is-uppercase has-text-white">Social Media</h3>
         <p class="has-text-white is-light">
-          Social Media:
+          Folgen Sie mir auf folgenden Kanälen:
         </p>
         <ul class="social">
             <li>
