--- a/contact/index.html
+++ b/contact/index.html
@@ -81,7 +81,6 @@
                   </span>
                 </a>
           </li>
-          <br>
           <li>
             <a href="tel:+41787037792" target="_blank" class="has-text-white">
                 <span class="icon">
@@ -96,7 +95,7 @@
 
         <h3 class="title is-about is-uppercase has-text-white">Social Media</h3>
         <p class="has-text-white is-light">
-          Folgen Sie mir auf folgenden Kanälen:
+          Folgen Sie mir auf meinen Kanälen:
         </p>
         <ul class="social">
             <li>
