Gallery First Steps

--- a/pictures/index.html
+++ b/pictures/index.html
@@ -4,99 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Refresh" content="0; url='making-of/'" />
     <title>Oliver Bolt - Bilder</title>
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
-  <body>
-    <div class="navbar has-background-black is-flex">
-      <div class="navbar-brand">
-        <a class="navbar-item" href="../">
-          <h1 class="title is-uppercase has-text-weight-bold has-text-white">Oliver Bolt</h1>
-        </a>
-      </div>
-      <div class="navbar-menu is-hidden-desktop is-flex-touch">
-        <div class="navbar-end is-flex-touch is-justify-content-flex-end">
-          <a href="https://www.instagram.com/ollie.bolt/" target="_blank" class="navbar-item is-flex-touch has-text-white">
-            <span class="icon">
-              <i class="fab fa-instagram"></i>
-            </span>
-          </a>
-          <a href="https://www.facebook.com/oliver.bolt1" target="_blank" class="navbar-item is-flex-touch has-text-white">
-            <span class="icon">
-              <i class="fab fa-facebook"></i>
-            </span>
-          </a>
-        </div>
-      </div>
-    </div>
-    <nav class="navbar is-transparent is-absolute" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-        <a class="navbar-item" href="/">
-          <h2 class="subtitle is-uppercase has-text-black">Creative Producer</h2>
-        </a>
-        <a role="button" class="navbar-burger has-text-white" aria-label="menu" aria-expanded="false" data-target="navbar-main">
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-        </a>
-      </div>
-      <div id="navbar-main" class="navbar-menu is-hidden-touch">
-        <div class="navbar-end">
-          <a href="../movies" class="navbar-item is-uppercase is-size-4 has-text-white">
-            Filme
-          </a>
-
-          <a href="../pictures" class="navbar-item is-uppercase is-size-4 has-text-white is-active">
-            Bilder
-          </a>
-          
-          <a href="../about" class="navbar-item is-uppercase is-size-4 has-text-white">
-            About
-          </a>
-
-          <a href="../contact" class="navbar-item is-uppercase is-size-4 has-text-white">
-            Kontakt
-          </a>
-        </div>
-      </div>
-    </nav>
-    <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
-      <div class="hero-body">
-        
-        <!-- Making Of
-
-        On The Road
-
-        Miscellaneous -->
-
-        <div id="lightgallery">
-            <a href="making-of/Cabin.jpg" data-lg-size="1600-2400">
-                <img alt="Cabin" src="making-of/Cabin.jpg" />
-            </a>
-            <a href="making-of/Cross.jpg" data-lg-size="1024-800">
-                <img alt="Cross" src="making-of/Cross.jpg" />
-            </a>
-        </div>
-
-      </div>
-      <div class="hero-foot"></div>
-    </section>
-    <nav class="navbar has-background-black is-fixed-bottom" role="navigation" aria-label="main navigation">
-      <div class="navbar-menu">
-        <div class="navbar-end">
-          <a href="https://www.instagram.com/ollie.bolt/" target="_blank" class="navbar-item has-text-white">
-            <span class="icon">
-              <i class="fab fa-instagram"></i>
-            </span>
-          </a>
-          <a href="https://www.facebook.com/oliver.bolt1" target="_blank" class="navbar-item has-text-white">
-            <span class="icon">
-              <i class="fab fa-facebook"></i>
-            </span>
-          </a>
-        </div>
-      </div>
-    </nav>
-    <script type="module" src="../lib/main.js"></script>
-  </body>
+  <body></body>
 </html>
