Fixed Gallery Background

--- a/pictures/making-of/index.html
+++ b/pictures/making-of/index.html
@@ -35,7 +35,7 @@
     <nav class="navbar is-transparent is-absolute" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="/">
-          <h2 class="subtitle is-uppercase has-text-black">Creative Producer</h2>
+          <h2 class="subtitle is-uppercase has-text-white">Creative Producer</h2>
         </a>
         <a role="button" class="navbar-burger has-text-white" aria-label="menu" aria-expanded="false" data-target="navbar-main">
           <span aria-hidden="true"></span>
@@ -63,7 +63,7 @@
         </div>
       </div>
     </nav>
-    <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred">
+    <section class="hero is-fullheight-with-navbar-twice has-background-black">
       <div class="hero-body is-flex is-flex-direction-column has-no-horizontal-padding">
         <ul class="gallery-offset-width gallery-nav">
           <li class="is-active">
