--- a/about/index.html
+++ b/about/index.html
@@ -63,9 +63,10 @@
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
       <div class="hero-body">
         <p class="has-text-white is-intro-text">
-          Ich bin Oliver. Ich liebe Herausforderungen und Abenteuer. Deswegen liebe ich die Berge. Und deshalb produziere ich seit 10 Jahren bewegte Bilder. <br></p>
+          Ich bin Oliver. Ich liebe Herausforderungen und Abenteuer. Deswegen liebe ich die Berge. <br>
+          Und deshalb produziere ich seit 10 Jahren bewegte Bilder. </p>
           
-          <p class="has-text-white is-light"></p>
+          <p class="has-text-white is-light">
           Der Anfang einer Bergtour und der Start eines Projektes haben für mich eines gemeinsam: Die Neugier und die Lust auf Kreativität. Das vereinte Losstürmen 
           begeistert mich immer wieder aufs Neue. Hingabe, Mut und Ehrlichkeit sind dabei für mich die wichtigsten Eckpfeiler für erfolgreiche Umsetzung einer solchen 
           gemeinsamen Reise. Will ein Ziel in einer bestimmten Zeit erreicht werden, kommt ein wichtiger Faktor dazu: Planung. Und hier komme ich ins Spiel. Ich biete 
