--- a/about/index.html
+++ b/about/index.html
@@ -62,16 +62,16 @@
     </nav>
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
       <div class="hero-body">
-        <p class="has-text-white is-intro-text">
+        <h3 class="title is-about is-uppercase has-text-white">
           Ich bin Oliver. Ich liebe Herausforderungen und Abenteuer. Deswegen liebe ich die Berge. <br>
-          Und deshalb produziere ich seit 10 Jahren bewegte Bilder. </p>
+          Und deshalb produziere ich seit 10 Jahren bewegte Bilder. </h3>
           
           <p class="has-text-white is-light">
           Der Anfang einer Bergtour und der Start eines Projektes haben für mich eines gemeinsam: Die Neugier und die Lust auf Kreativität. Das vereinte Losstürmen 
           begeistert mich immer wieder aufs Neue. Hingabe, Mut und Ehrlichkeit sind dabei für mich die wichtigsten Eckpfeiler für erfolgreiche Umsetzung einer solchen 
           gemeinsamen Reise. Will ein Ziel in einer bestimmten Zeit erreicht werden, kommt ein wichtiger Faktor dazu: Planung. Und hier komme ich ins Spiel. Ich biete 
           vielseitige Erfahrung, wenn es darum geht, audiovisuelle Medienprojekte zu planen und umzusetzen. In meinem Rucksack hat es stets Platz für die nötige Flexibilität. 
-          Denn die spannenden Momente warten auf einen, wenn man bereit ist, gewohnte Wege zu verlassen.
+          Denn die spannenden Momente entstehen oft erst, wenn man bereit ist, gewohnte Wege zu verlassen.
 
         </p>
 
