--- a/about/index.html
+++ b/about/index.html
@@ -63,9 +63,8 @@
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
       <div class="hero-body">
         <h3 class="title is-about is-uppercase has-text-white">
-          Ich bin Oliver. Ich liebe Herausforderungen und Abenteuer. Deswegen liebe ich die Berge. <br>
-          Und deshalb produziere ich seit 10 Jahren bewegte Bilder. </h3>
-          
+          Ich bin Oliver. Ich liebe Herausforderungen und Abenteuer. Deswegen bin ich gerne in den Bergen.
+          Und deshalb produziere ich seit 10 Jahren bewegte Bilder. </h3
           <p class="has-text-white is-light">
           Der Anfang einer Bergtour und der Start eines Projektes haben für mich eines gemeinsam: Die Neugier und die Lust auf Kreativität. Das vereinte Losstürmen 
           begeistert mich immer wieder aufs Neue. Hingabe, Mut und Ehrlichkeit sind dabei für mich die wichtigsten Eckpfeiler für erfolgreiche Umsetzung einer solchen 
