Change Produktonsleitung Zwischenstopp

--- a/movies/index.html
+++ b/movies/index.html
@@ -311,7 +311,7 @@
             <div class="content">
               <dl class="has-text-white meta">
                 <dt>Funktion</dt>
-                <dd>Aufnahmeleitung</dd>
+                <dd>Produktionsleitung</dd>
 
                 <dt>Regie</dt>
                 <dd>Cosima Frei</dd>
