Videosource Geisterzug korrigiert

--- a/movies/index.html
+++ b/movies/index.html
@@ -197,7 +197,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image">
-              <iframe class="is-16by9" src="https://www.youtube.com/embed/qGmp8-0eHoI?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe class="is-16by9" src="https://www.youtube.com/embed/W2QhRmhA1yg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </figure>
           </div>
           <div class="card-content">
