--- a/movies/index.html
+++ b/movies/index.html
@@ -64,7 +64,50 @@
       <div class="hero-head"></div>
       <div class="hero-body movies">
 
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+              <iframe class="is-16by9" src="https://www.youtube.com/embed/hd7_0pQ7Tg8?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <h4 class="has-text-white">SR111 - Absturz über Halifax <small>Folge 4</small></h4>
+                <h5 class="title is-4">
+                  Dokudrama-Serie «Es geschah am...»
+                  <i class="space">|</i> 
+                  SRF
+                  <i class="space">|</i>
+                  2021
+                  <i class="space">|</i>
+                  100 min
+                  </h5>
+              </div>
+            </div>
+
+            <div class="content">
+              <dl class="has-text-white meta">
+                <dt>Funktion</dt>
+                <dd>Produktionsleitung</dd>
+
+                <dt>Regie</dt>
+                <dd>Chanelle Eidenbenz</dd>
+
+                <dt>Kamera</dt>
+                <dd>René Schönenberger</dd>
+
+                <dt>Schnitt</dt>
+                <dd>Nicole Hussy</dd>
+
+                <dt>Produzent</dt>
+                <dd>Rolf Elsener</dd>
+              </dl>
+            </div>
+          </div>
+        </div>
         
+
         <div class="card">
           <div class="card-image">
             <figure class="image">
