SRF Player Embedded

--- a/movies/index.html
+++ b/movies/index.html
@@ -67,7 +67,10 @@
         <div class="card">
           <div class="card-image">
             <figure class="image">
-              <iframe class="is-16by9" src="https://www.youtube.com/embed/hd7_0pQ7Tg8?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+              <iframe class="is-16by9" src="https://www.srf.ch/play/embed?urn=urn:srf:video:0c987c98-2c6f-4d6e-9927-9e241a0ecac5&subdivisions=false" allowfullscreen allow="geolocation *; autoplay; encrypted-media"></iframe>
+
+              
             </figure>
           </div>
           <div class="card-content">
