About Text angepasst

--- a/about/index.html
+++ b/about/index.html
@@ -66,11 +66,11 @@
           Ich bin Oliver. Ich liebe Herausforderungen und Abenteuer. Deswegen bin ich gerne in den Bergen.
           Und deshalb produziere ich seit 10 Jahren bewegte Bilder. </h3>
           <p class="has-text-white is-light">
-          Der Anfang einer Bergtour und der Start eines Projektes haben für mich eines gemeinsam: Die Neugier und die Lust auf Kreativität. Das vereinte Losstürmen 
-          begeistert mich immer wieder aufs Neue. Hingabe, Mut und Ehrlichkeit sind dabei für mich die wichtigsten Eckpfeiler für erfolgreiche Umsetzung einer solchen 
-          gemeinsamen Reise. Will ein Ziel in einer bestimmten Zeit erreicht werden, kommt ein wichtiger Faktor dazu: Planung. Und hier komme ich ins Spiel. Ich biete 
-          vielseitige Erfahrung, wenn es darum geht, audiovisuelle Medienprojekte zu planen und umzusetzen. In meinem Rucksack hat es stets Platz für die nötige Flexibilität. 
-          Denn die spannenden Momente entstehen oft erst, wenn man bereit ist, gewohnte Wege zu verlassen.
+          Sowohl beim Anfang einer Bergtour als auch beim Start eines Projektes reizen mich zwei Dinge ganz besonders: Neugierde und die Lust auf neue Herausforderung. Das vereinte Losstürmen 
+          begeistert mich immer wieder aufs Neue. Hingabe, Mut und Ehrlichkeit sind dabei die wichtigsten Eckpfeiler für eine erfolgreiche Umsetzung dieser 
+          gemeinsamen Reise. Um ein Ziel in einer bestimmten Zeit zu erreichen, kommt ein wichtiger Faktor dazu: Planung. Und hier komme ich ins Spiel. Ich biete 
+          vielseitige Erfahrung, wenn es darum geht, audiovisuelle Medienprojekte zu planen und umzusetzen. In meinem Rucksack hat es dabei stets Platz für Flexibilität. 
+          Denn spannende Momente entstehen oft erst, wenn man bereit ist, gewohnte Pfade zu verlassen.
 
         </p>
 
@@ -99,7 +99,7 @@
           <dt>2014 - 2015</dt>
           <dd>Praktikum im Bereich Content Production bei Habegger AG</dd>
 
-          <dt>2014</dt>
+          <dt>2014</dt>b
           <dd>Statistenkoordinator bei «Vaterjagd» von Rahel Grunder <small>(SRF | atlantis pictures)</small></dd>
 
           <dt>2010 – 2013</dt>
