About Text nochmals angepasst

--- a/about/index.html
+++ b/about/index.html
@@ -66,9 +66,9 @@
           Ich bin Oliver. Ich liebe Herausforderungen und Abenteuer. Deswegen bin ich gerne in den Bergen.
           Und deshalb produziere ich seit 10 Jahren bewegte Bilder. </h3>
           <p class="has-text-white is-light">
-          Sowohl beim Anfang einer Bergtour als auch beim Start eines Projektes reizen mich zwei Dinge ganz besonders: Neugierde und die Lust auf neue Herausforderung. Das vereinte Losstürmen 
+          Beim Start einer Bergtour wie auch beim Beginn eines Projektes treiben mich jeweils zwei Dinge ganz besonders an: Neugierde und Lust auf eine neue Herausforderung. Das vereinte Losstürmen 
           begeistert mich immer wieder aufs Neue. Hingabe, Mut und Ehrlichkeit sind dabei die wichtigsten Eckpfeiler für eine erfolgreiche Umsetzung dieser 
-          gemeinsamen Reise. Um ein Ziel in einer bestimmten Zeit zu erreichen, kommt ein wichtiger Faktor dazu: Planung. Und hier komme ich ins Spiel. Ich biete 
+          gemeinsamen Reise. Um ein solches Ziel in einer bestimmten Zeit zu erreichen, kommt ein wichtiger Faktor dazu: Planung. Und hier komme ich ins Spiel. Ich biete 
           vielseitige Erfahrung, wenn es darum geht, audiovisuelle Medienprojekte zu planen und umzusetzen. In meinem Rucksack hat es dabei stets Platz für Flexibilität. 
           Denn spannende Momente entstehen oft erst, wenn man bereit ist, gewohnte Pfade zu verlassen.
 
