not uppercase lead

--- a/about/index.html
+++ b/about/index.html
@@ -62,7 +62,7 @@
     </nav>
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
       <div class="hero-body">
-        <h3 class="title is-about is-uppercase has-text-white">
+        <h3 class="title is-about has-text-white">
           Ich bin Oliver. Ich liebe Herausforderungen und Abenteuer. Deswegen bin ich gerne in den Bergen.
           Und deshalb produziere ich seit 10 Jahren bewegte Bilder. </h3>
           <p class="has-text-white is-light">
