--- a/about/index.html
+++ b/about/index.html
@@ -63,8 +63,8 @@
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
       <div class="hero-body">
         <h3 class="title is-about has-text-white">
-          ❮Ich bin Oliver. Ich liebe Herausforderungen und Abenteuer. Deswegen bin ich gerne in den Bergen.
-          Und deshalb produziere ich seit 10 Jahren bewegte Bilder.❯ </h3>
+          «Hi, ich bin Oliver. Ich liebe Herausforderungen und Abenteuer. Deswegen bin ich gerne in den Bergen.
+          Und deshalb produziere ich seit 10 Jahren bewegte Bilder.» </h3>
           <p class="has-text-white is-light">
           Beim Start einer Bergtour wie auch beim Beginn eines Projektes treiben mich jeweils zwei Dinge ganz besonders an: Neugierde und Lust auf eine neue Herausforderung. Das vereinte Losstürmen 
           begeistert mich immer wieder aufs Neue. Hingabe, Mut und Ehrlichkeit sind dabei die wichtigsten Eckpfeiler für eine erfolgreiche Umsetzung dieser 
