--- a/pictures/making-of/index.html
+++ b/pictures/making-of/index.html
@@ -7,6 +7,7 @@
     <title>Oliver Bolt - Bilder | Making Of</title>
     <link rel="stylesheet" href="../../assets/css/main.css" />
 
+    <link rel="stylesheet" href="../../lib/justifiedGallery-3.2.0/css/justifiedGallery.min.css" />
     <link rel="stylesheet" href="../../lib/lightGallery-2.3.0/css/lightgallery.css" />
     <link rel="stylesheet" href="../../lib/lightGallery-2.3.0/css/lg-thumbnail.css" />
   </head>
@@ -77,7 +78,7 @@
           </li>
         </ul>
 
-        <div id="inline-lightgallery" class="gallery-inline gallery-width">
+        <div id="lightgallery" class="gallery-inline gallery-width">
           <a href="01_Making of_1200px weisser Rahmen (1).jpg">
             <img src="Thumbnail Rahmen weiss/01_Thumbnail Rahmen weiss.jpg" alt="" />
           </a>
@@ -239,6 +240,8 @@
         </div>
       </div>
     </nav>
+    <script src="../../lib/jquery.min.js"></script>
+    <script src="../../lib/justifiedGallery-3.2.0/js/jquery.justifiedGallery.min.js"></script>
     <script type="module" src="../../lib/lightGallery-2.3.0/lightgallery.min.js"></script>
     <script type="module" src="../../lib/lightGallery-2.3.0/plugins/thumbnail/lg-thumbnail.min.js"></script>
     <script type="module" src="../../lib/main.js"></script>
