--- a/pictures/on-the-road/index.html
+++ b/pictures/on-the-road/index.html
@@ -7,6 +7,7 @@
     <title>Oliver Bolt - Bilder | On The Road</title>
     <link rel="stylesheet" href="../../assets/css/main.css" />
 
+    <link rel="stylesheet" href="../../lib/justifiedGallery-3.2.0/css/justifiedGallery.min.css" />
     <link rel="stylesheet" href="../../lib/lightGallery-2.3.0/css/lightgallery.css" />
     <link rel="stylesheet" href="../../lib/lightGallery-2.3.0/css/lg-thumbnail.css" />
   </head>
@@ -245,6 +246,8 @@
         </div>
       </div>
     </nav>
+    <script src="../../lib/jquery.min.js"></script>
+    <script src="../../lib/justifiedGallery-3.2.0/js/jquery.justifiedGallery.min.js"></script>
     <script type="module" src="../../lib/lightGallery-2.3.0/lightgallery.min.js"></script>
     <script type="module" src="../../lib/lightGallery-2.3.0/plugins/thumbnail/lg-thumbnail.min.js"></script>
     <script type="module" src="../../lib/main.js"></script>
